[gd_scene load_steps=2 format=3 uid="uid://b3y4u5i6o7p8q"]

[ext_resource type="Script" path="res://ui/inventory/inventory_slot_ui.gd" id="1_slot_ui"]

[node name="InventorySlotUI" type="Panel"]
custom_minimum_size = Vector2(48, 48)
offset_right = 48.0
offset_bottom = 48.0
script = ExtResource("1_slot_ui")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemTexture" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "x99"
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 0